認知科学の表現を修正

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <!-- Solution Section -->
         <section id="solution" class="solution-section">
             <div class="container">
-                <h2 class="section-title">続けられない自分を変える<br>-認知科学に基づく2つの仕組み-</h2>
+                <h2 class="section-title">続けられない自分を変える<br>-認知行動理論（CBT）に基づく2つの仕組み-</h2>
                 <div class="solution-grid">
                     <div class="solution-card">
                         <div class="solution-number">1</div>
@@ -229,7 +229,7 @@
                         <p class="organizer-role">朝活コミュニティAXL 主宰 / SNS総フォロワー10万人超</p>
                         <p class="organizer-bio">
                             「続けられない自分を変えたい」——その想いから習慣化の仕組みづくりを追求。<br>
-                            認知科学とコーチングをベースに、誰もが「自分を変えられる」仕組みを提供しています。
+                            認知行動理論（CBT）とコーチングをベースに、誰もが「自分を変えられる」仕組みを提供しています。
                         </p>
                         <p class="organizer-message">
                             「一人では挫折してしまうことも、仲間と仕組みがあれば自然と続く。<br>
