--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://example.com/">
-    <meta property="og:title" content="三日坊主の自分から卒業 | 朝活×ジャーナルで習慣化">
+    <meta property="og:title" content="朝活コミュニティAXL | 朝活×ジャーナルで習慣化">
     <meta property="og:description" content="週1の朝活×LINE習慣化ツールで、もう一人で挫折しない。続けられない悩みを今日で終わらせませんか？">
     <meta property="og:image" content="https://example.comassets/images/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://example.com/">
-    <meta property="twitter:title" content="三日坊主の自分から卒業 | 朝活×ジャーナルで習慣化">
+    <meta property="twitter:title" content="朝活コミュニティAXL | 朝活×ジャーナルで習慣化">
     <meta property="twitter:description" content="週1の朝活×LINE習慣化ツールで、もう一人で挫折しない。続けられない悩みを今日で終わらせませんか？">
     <meta property="twitter:image" content="https://example.comassets/images/og-image.jpg">
 
@@ -45,7 +45,7 @@
                     <a href="#solution" class="nav-link">仕組み</a>
                     <a href="#results" class="nav-link">実績</a>
                     <a href="#faq" class="nav-link">よくある質問</a>
-                    <a href="#cta" class="nav-link cta-link">無料で体験する</a>
+                    <a class="cta-btn nav-link cta-link">無料で体験する ▶︎</a>
                 </div>
             </div>
         </nav>
@@ -54,25 +54,41 @@
     <main>
         <!-- Hero Section -->
         <section id="home" class="hero">
-            
+
 
             <div class="container">
                 <div class="hero-content">
                     <h1 class="brand-hero" aria-label="朝活コミュニティ AXL">
-                <span class="brand-line">朝活コミュニティ</span>
-                <span class="brand-axl">アクセル</span>
-            </h1>
+                        <span class="brand-line">朝活コミュニティ</span>
+                        <span class="brand-axl">AXL
+                             <span class="brand-ruby">アクセル</span>
+                        </span>
+                    </h1>
                     <h1 class="hero-title">
                         <span>三日坊主の自分から卒業。</span>
-                        <span class="accent-text">朝活×ジャーナルで、</span>
-                        <span>昨日までの自分をリセットしよう。</span>
+                        <span class="accent-text">朝活×ジャーナルで</span>
+                        <span>昨日までの自分をリセット！
+                            <!DOCTYPE html>
+                            <html lang="en">
+
+                            <head>
+                                <meta charset="UTF-8">
+                                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                                <title>Document</title>
+                            </head>
+
+                            <body>
+
+                            </body>
+
+                            </html>
+                        </span>
                     </h1>
                     <p class="hero-subtitle">週1の朝活 × 仲間との交流 × オリジナルLINE習慣化ツールで、もう一人で挫折しない。</p>
                     <div class="hero-description">
                         <p>続けられない悩みを、今日で終わらせませんか？</p>
-                        <p>仲間と一緒だから自然と続く、新しい習慣化の仕組み</p>
                     </div>
-                    <a class="cta-btn btn btn-primary">▶ 無料で体験する</a>
+                    <a class="cta-btn btn btn-primary">無料で体験する ▶︎</a>
                 </div>
                 <div class="scroll-indicator">
                     <span>習慣が続く仕組みを見る</span>
@@ -84,7 +100,7 @@
         <!-- Problem Empathy Section -->
         <section class="problem-section">
             <div class="container">
-                <h2 class="section-title">あなたも、こんな悩みありませんか？</h2>
+                <h2 class="section-title">こんな悩みありませんか？</h2>
                 <ul class="problem-list">
                     <li>何をしても続けられず自己嫌悪してしまう</li>
                     <li>成長したいのに行動に移せず停滞している</li>
@@ -104,8 +120,8 @@
                         <div class="solution-number">1</div>
                         <h3 class="solution-title">週1のオンライン朝活（Zoom）</h3>
                         <ul class="solution-features">
-                            <li>呼吸・感謝・振り返り・ジャーナル・目標設定で一週間のリズムを整える</li>
-                            <li>仲間と一緒だから自然と続く</li>
+                            <li>朝活×ジャーナルで1週間のリズムを整える</li>
+                            <li>仲間と一緒だから自然と続く環境</li>
                         </ul>
                         <img src="assets/images/online-morning-activity.jpg" alt="オンライン朝活の様子" width="300" height="200"
                             class="solution-image">
@@ -114,8 +130,8 @@
                         <div class="solution-number">2</div>
                         <h3 class="solution-title">オリジナルLINE習慣化ツール</h3>
                         <ul class="solution-features">
-                            <li>目標設定／進捗記録／リマインド通知を自動で</li>
-                            <li>忙しい日もワンクリックで習慣をブースト</li>
+                            <li>目標設定→進捗記録→習慣化をサポート</li>
+                            <li>簡単操作で忙しい日も続く仕組みを用意</li>
                         </ul>
                         <img src="assets/images/line-habit-tool.jpg" alt="LINE習慣化ツールの画面" width="300" height="200"
                             class="solution-image">
@@ -128,29 +144,51 @@
         <section class="before-after-section">
             <div class="container">
                 <h2 class="section-title">変化を実感できる</h2>
+
                 <div class="comparison-grid">
+
+                    <!-- Before -->
                     <div class="comparison-column before">
                         <h3 class="comparison-title">Before</h3>
-                        <ul class="comparison-list">
-                            <li>三日坊主</li>
-                            <li>自分に失望</li>
-                            <li>生活が乱れる</li>
-                            <li>孤独感</li>
-                        </ul>
+                        <div class="comparison-body">
+                            <div class="comparison-content">
+                                <ul class="comparison-list">
+                                    <li>三日坊主</li>
+                                    <li>自分に失望</li>
+                                    <li>生活が乱れる</li>
+                                    <li>孤独感</li>
+                                </ul>
+                            </div>
+                            <div class="comparison-media">
+                                <img src="assets/images/before-person.jpg" alt="Beforeの人物">
+                            </div>
+                        </div>
                     </div>
+
                     <div class="comparison-arrow"></div>
+
+                    <!-- After -->
                     <div class="comparison-column after">
                         <h3 class="comparison-title">After</h3>
-                        <ul class="comparison-list">
-                            <li>習慣が続く</li>
-                            <li>自信が持てる</li>
-                            <li>感情に振り回されない</li>
-                            <li>仲間と安心感</li>
-                        </ul>
+                        <div class="comparison-body">
+                            <div class="comparison-content">
+                                <ul class="comparison-list">
+                                    <li>習慣が続く</li>
+                                    <li>自信が持てる</li>
+                                    <li>感情に振り回されない</li>
+                                    <li>仲間と安心感</li>
+                                </ul>
+                            </div>
+                            <div class="comparison-media">
+                                <img src="assets/images/after-person.jpg" alt="Afterの人物">
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
         </section>
+
 
         <!-- Results/Social Proof Section (Image-based) -->
         <section id="results" class="results-section results-image-section">
@@ -198,7 +236,7 @@
                     </figure>
                 </div>
 
-                <a class="cta-btn btn btn-primary">▶ 無料で体験する</a>
+                <a class="cta-btn btn btn-primary">無料で体験する ▶︎</a>
             </div>
 
 
@@ -218,7 +256,7 @@
         <section class="primary-cta-section">
             <div class="container">
                 <h2 class="cta-title">続けられない悩みを、今日で終わらせませんか？</h2>
-                <a class="cta-btn btn btn-primary btn-large">無料で体験する</a>
+                <a class="cta-btn btn btn-primary btn-large">無料で体験する ▶︎</a>
             </div>
         </section>
 
@@ -296,7 +334,7 @@
         <section id="cta" class="closing-cta-section">
             <div class="container">
                 <h2 class="cta-title">一人で頑張らなくていい。新しい習慣を、ここから始めよう。</h2>
-                <a class="cta-btn btn btn-primary btn-large">無料で体験する</a>
+                <a class="cta-btn btn btn-primary btn-large">無料で体験する ▶︎</a>
             </div>
         </section>
     </main>
