ファーストビューのサブ文言のサイズ感を調整

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <!-- Before/After Section -->
         <section class="before-after-section">
             <div class="container">
-                <h2 class="section-title">変化を実感できる</h2>
+                <h2 class="section-title">変化を実感できる内容</h2>
 
                 <div class="comparison-grid">
 
