受講生実績をリッチに

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h1 class="brand-hero" aria-label="朝活コミュニティ AXL">
                         <span class="brand-line">朝活コミュニティ</span>
                         <span class="brand-axl">AXL
-                             <span class="brand-ruby">アクセル</span>
+                            <span class="brand-ruby">アクセル</span>
                         </span>
                     </h1>
                     <h1 class="hero-title">
@@ -114,7 +114,7 @@
         <!-- Solution Section -->
         <section id="solution" class="solution-section">
             <div class="container">
-                <h2 class="section-title">続けられない自分を変える<br>-認知行動理論（CBT）に基づく2つの仕組み-</h2>
+                <h2 class="section-title">続けられない自分を変える<br>認知行動理論（CBT）に基づく2つの仕組み</h2>
                 <div class="solution-grid">
                     <div class="solution-card">
                         <div class="solution-number">1</div>
@@ -193,7 +193,9 @@
         <!-- Results/Social Proof Section (Image-based) -->
         <section id="results" class="results-section results-image-section">
             <div class="container">
-                <h2 class="section-title">AXL受講生の実績</h2>
+                <div class="section-heading">
+                    <span class="heading-label">AXL受講生の実績</span>
+                </div>
 
                 <div class="results-image-grid">
                     <!-- 1人目 -->
@@ -204,8 +206,8 @@
                                 loading="lazy">
                         </button>
                         <figcaption class="achievement-caption">
-                            <span class="achievement-name">西田 優也さん（29歳）</span>
-                            <span class="achievement-note">会社員 → 経営者（法人2社・3事業）</span>
+                            <p class="achievement-name">西田 優也さん（29歳）</p>
+                            <p class="achievement-note">会社員 → 経営者（法人2社・3事業）</p>
                         </figcaption>
                     </figure>
 
@@ -217,8 +219,8 @@
                                 alt="藤田雄也さん（27歳） 警察官からWebマーケ会社社長に。SNS開始4ヶ月で200万円達成、その後も月100万円を6ヶ月以上継続" loading="lazy">
                         </button>
                         <figcaption class="achievement-caption">
-                            <span class="achievement-name">藤田 雄也さん（27歳）</span>
-                            <span class="achievement-note">警察官 → Webマーケティング会社社長</span>
+                            <p class="achievement-name">藤田 雄也さん（27歳）</p>
+                            <p class="achievement-note">警察官 → Webマーケティング会社社長</p>
                         </figcaption>
                     </figure>
 
@@ -230,8 +232,8 @@
                                 alt="橘川亜矢さん（22歳） 在学中にベンチャー企業2社の管理職に就任。ボディメイクの挑戦やPMスキルを習得し活躍" loading="lazy">
                         </button>
                         <figcaption class="achievement-caption">
-                            <span class="achievement-name">橘川 亜矢さん（22歳）</span>
-                            <span class="achievement-note">大学生 ＆ ベンチャー企業 管理職</span>
+                            <p class="achievement-name">橘川 亜矢さん（22歳）</p>
+                            <p class="achievement-note">大学生 ＆ ベンチャー企業 管理職</p>
                         </figcaption>
                     </figure>
                 </div>
